clusters/managed/monitoring/prometheus/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: &app prometheus
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/href: "https://prometheus.trusted.nirmalhk7.com"
    gethomepage.dev/group: Observability
    gethomepage.dev/description: "Metrics and targets"
    gethomepage.dev/icon: prometheus
    gethomepage.dev/app: prometheus # optional, may be needed if app.kubernetes.io/name != ingress metadata.name
    gethomepage.dev/name: Prometheus
    gethomepage.dev/weight: "20"
    gethomepage.dev/widget.type: "prometheus"
    gethomepage.dev/widget.url: "http://main-kube-prometheus-stack-prometheus.mgd-monitoring.svc.cluster.local:9090"
    gethomepage.dev/pod-selector: "app.kubernetes.io/name=prometheus"
spec:
  entryPoints:
    - websecure
    - web
  routes:
    - match: Host(`prometheus.trusted.nirmalhk7.com`)
      kind: Rule
      services:
        - name: main-kube-prometheus-stack-prometheus
          port: 9090
